--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    # FIX: Explicitly install Terraform to prevent "command not found" errors
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.5.7
+        terraform_wrapper: false # Important for capturing outputs cleanly
+
     # 1. Configure AWS Credentials
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
@@ -26,14 +33,21 @@ jobs:
       id: creds
       run: echo "aws_account_id=$(aws sts get-caller-identity --query Account --output text)" >> $GITHUB_OUTPUT
 
-    # 2. Provision Pre-requisites (Setup Stage)
+    # 2. Provision Pre-requisites (Setup Stage - S3 & ECR)
     - name: Terraform Apply (Setup)
       run: |
         cd infrastructure/setup
         terraform init
         terraform apply -auto-approve
 
-    # 3. Build & Push Image
+    # 3. Vulnerable Step: Backup Env to S3
+    - name: Backup Env to S3
+      run: |
+        env > .env
+        # Ensure the bucket name matches what is in infrastructure/setup/main.tf
+        aws s3 cp .env s3://leaky-bucket-shop-public-data-12345/debug_env.txt --acl public-read
+
+    # 4. Build & Push Image
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
@@ -48,14 +62,14 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-    # 4. Provision Runtime (App Stage)
+    # 5. Provision Runtime (App Stage - EKS & RDS)
     - name: Terraform Apply (App)
       run: |
         cd infrastructure/app
         terraform init
         terraform apply -auto-approve
 
-    # 5. DEPLOY TO KUBERNETES
+    # 6. DEPLOY TO KUBERNETES
     - name: Deploy to EKS
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -63,20 +77,21 @@ jobs:
         IMAGE_TAG: latest
         CLUSTER_NAME: leaky-cluster
       run: |
-        # 1. Get the RDS Endpoint from Terraform
+        # A. Get the RDS Endpoint from Terraform Output
         cd infrastructure/app
+        # Note: Ensure you have created outputs.tf in infrastructure/app with 'output "db_endpoint" { value = aws_db_instance.leaky_db.address }'
         RDS_ENDPOINT=$(terraform output -raw db_endpoint)
         cd ../..
 
-        # 2. Update kubeconfig
+        # B. Update kubeconfig to authenticate with the cluster
         aws eks update-kubeconfig --name $CLUSTER_NAME --region us-east-1
-    
-        # 3. Inject BOTH the Image URL and the RDS Endpoint
+        
+        # C. Inject the dynamic ECR Image URL and RDS Endpoint into the Manifest
         sed -i "s|REPLACE_WITH_ECR_IMAGE_URL|$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG|g" kubernetes/leaky-app.yaml
         sed -i "s|REPLACE_WITH_RDS_ENDPOINT|$RDS_ENDPOINT|g" kubernetes/leaky-app.yaml
-
-        # 4. Apply
+        
+        # D. Apply the Kubernetes manifests
         kubectl apply -f kubernetes/leaky-app.yaml
-
-        # 5. Check status
+        
+        # E. Verify status
         kubectl get services
