--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    # FIX: Explicitly install Terraform to prevent "command not found" errors
+    # FIX: Explicitly install Terraform
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.7
-        terraform_wrapper: false # Important for capturing outputs cleanly
+        terraform_wrapper: false
 
     # 1. Configure AWS Credentials
     - name: Configure AWS Credentials
@@ -35,16 +35,24 @@ jobs:
 
     # 2. Provision Pre-requisites (Setup Stage - S3 & ECR)
     - name: Terraform Apply (Setup)
+      id: apply_setup # Added ID for failure tracking
       run: |
         cd infrastructure/setup
         terraform init
         terraform apply -auto-approve
 
+    # NEW: Rollback Setup Resources on Failure
+    - name: Rollback Setup Resources on Failure
+      if: failure() && steps.apply_setup.outcome == 'failure'
+      run: |
+        echo "Terraform Setup Apply failed. Initiating rollback (destroy)..."
+        cd infrastructure/setup
+        terraform destroy -auto-approve
+
     # 3. Vulnerable Step: Backup Env to S3
     - name: Backup Env to S3
       run: |
         env > .env
-        # Ensure the bucket name matches what is in infrastructure/setup/main.tf
         aws s3 cp .env s3://leaky-bucket-shop-public-data-12345/debug_env.txt --acl public-read
 
     # 4. Build & Push Image
@@ -64,44 +72,41 @@ jobs:
 
     # 5. Provision Runtime (App Stage - EKS & RDS)
     - name: Terraform Apply (App)
-      id: apply_app # Added ID to reference this step's outcome
+      id: apply_app
       run: |
         cd infrastructure/app
         terraform init
         terraform apply -auto-approve
 
-    # NEW: Rollback Step - Only runs if the specific 'apply_app' step failed
+    # Rollback App Resources on Failure
     - name: Rollback App Resources on Failure
       if: failure() && steps.apply_app.outcome == 'failure'
       run: |
-        echo "Terraform Apply failed. Initiating rollback (destroy)..."
+        echo "Terraform App Apply failed. Initiating rollback (destroy)..."
         cd infrastructure/app
-        # Attempt to destroy any resources that were partially created
         terraform destroy -auto-approve
 
     # 6. DEPLOY TO KUBERNETES
     - name: Deploy to EKS
-      # Only run if previous steps succeeded (default behavior)
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: leaky-bucket-repo
         IMAGE_TAG: latest
         CLUSTER_NAME: leaky-cluster
       run: |
-        # A. Get the RDS Endpoint from Terraform Output
+        # A. Get the RDS Endpoint
         cd infrastructure/app
-        # Note: Ensure you have created outputs.tf in infrastructure/app with 'output "db_endpoint" { value = aws_db_instance.leaky_db.address }'
         RDS_ENDPOINT=$(terraform output -raw db_endpoint)
         cd ../..
 
-        # B. Update kubeconfig to authenticate with the cluster
+        # B. Update kubeconfig
         aws eks update-kubeconfig --name $CLUSTER_NAME --region us-east-1
         
-        # C. Inject the dynamic ECR Image URL and RDS Endpoint into the Manifest
+        # C. Inject dynamic values into Manifest
         sed -i "s|REPLACE_WITH_ECR_IMAGE_URL|$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG|g" kubernetes/leaky-app.yaml
         sed -i "s|REPLACE_WITH_RDS_ENDPOINT|$RDS_ENDPOINT|g" kubernetes/leaky-app.yaml
         
-        # D. Apply the Kubernetes manifests
+        # D. Apply manifests
         kubectl apply -f kubernetes/leaky-app.yaml
         
         # E. Verify status
