--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,8 @@ jobs:
     # PATH A: DESTROY (TEARDOWN)
     # =========================================================
 
-    # --- NEW PRE-DESTROY CLEANUP STEP ---
-    - name: Pre-Destroy: Delete Kubernetes Load Balancers
+    # --- PRE-DESTROY CLEANUP STEP (CRITICAL FOR IGW/VPC) ---
+    - name: Pre-Destroy - Delete Kubernetes Load Balancers
       if: env.TF_ACTION == 'destroy'
       env:
         CLUSTER_NAME: leaky-cluster
